[package]
name = "sim-rns-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
maruzzella = { path = "../../maruzzella" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sim-rns-core = { path = "../sim-rns-core" }
sim-rns-plugin = { path = "../sim-rns-plugin" }
