[package]
name = "sim-rns-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
maruzzella_sdk = { path = "../../maruzzella/maruzzella_sdk" }
serde_json = "1"
sim-rns-core = { path = "../sim-rns-core" }
